# leptos-realworld-app

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs
src/api/: articles.rs  mod.rs
src/components/: footer.rs  header.rs  layout.rs  mod.rs
src/features/auth/: mod.rs  sign_in_page.rs  sign_up_page.rs
src/features/home/: article_preview.rs  banner.rs  feed.rs  feed_toggle.rs  home_page.rs  mod.rs  tags.rs
