[package]
name = "leptos-realworld-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.5.7"
leptos_meta = { version = '0.5.7', features = ["csr"] }
leptos_router = { version = '0.5.7', features = ["csr"] }
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
uuid = { version = "1", features = ["v4", "js", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage"] }
reqwest = { version = "0.11", features = ["json"] }
